# rosbags-rs

./: .gitignore  Cargo.toml  FEATURES.md  LICENSE  README.md
.github/workflows/: ci.yml
examples/: bag_info.rs  copy_bag_filtered.rs  debug_gps.rs  debug_gps_new.rs  debug_pointstamped.rs  debug_pose.rs  debug_pose_mcap.rs  debug_pose_new.rs  extract_topic.rs  list_topics.rs  read_test_bags.rs  test_cdr_manual.rs  test_comprehensive_support.rs  test_new_bag.rs  write_dummy_bag.rs
scripts/: generate_test_bags.py
src/: cdr.rs  error.rs  lib.rs  messages.rs  metadata.rs  reader.rs  types.rs  writer.rs
src/storage/: mcap.rs  mod.rs  sqlite.rs
tests/: README.md  integration_tests.rs
tests/test_bags/test_bag_mcap/: metadata.yaml  test_bag_mcap.mcap
tests/test_bags/test_bag_sqlite3/: metadata.yaml  test_bag_sqlite3.db3
