[package]
name = "rosbags-rs"
version = "0.3.4"
edition = "2021"
authors = ["rosbags-rs contributors"]
description = "A high-performance Rust library for reading ROS2 bag files with full Python rosbags compatibility"
license = "Apache-2.0"
repository = "https://github.com/amin-abouee/rosbags-rs"
homepage = "https://github.com/amin-abouee/rosbags-rs"
documentation = "https://docs.rs/rosbags-rs"
readme = "README.md"
keywords = ["ros", "ros2", "rosbag", "robotics", "serialization"]
categories = ["parsing", "science::robotics", "development-tools"]
rust-version = "1.70"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1.0"
anyhow = "1.0"

# Database support
rusqlite = { version = "0.31", features = ["bundled"], optional = true }

# Compression support
zstd = { version = "0.13", optional = true }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Binary data handling
byteorder = "1.5"
bytes = "1.10"

# Async support (optional, for future use)
tokio = { version = "1.45", features = ["rt", "fs"], optional = true }

# MCAP support
mcap = { version = "0.8", optional = true }
memmap2 = { version = "0.9", optional = true }

# Binary dependencies
hex = "0.4"
image = "0.24"

[dev-dependencies]
tempfile = "3.20"
pretty_assertions = "1.4"

[features]
default = ["sqlite", "mcap", "compression"]
sqlite = ["rusqlite"]
mcap = ["dep:mcap", "dep:memmap2"]
compression = ["dep:zstd"]
async = ["tokio"]


