[package]
name = "rosbags-rs"
version = "0.3.4"
edition = "2021"
authors = ["rosbags-rs contributors"]
description = "A high-performance Rust library for reading ROS2 bag files with full Python rosbags compatibility"
license = "Apache-2.0"
repository = "https://github.com/amin-abouee/rosbags-rs"
homepage = "https://github.com/amin-abouee/rosbags-rs"
documentation = "https://docs.rs/rosbags-rs"
readme = "README.md"
keywords = ["ros", "ros2", "rosbag", "robotics", "serialization"]
categories = ["parsing", "science::robotics", "development-tools"]
rust-version = "1.70"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }

# Database support
rusqlite = { version = "0.37", optional = true, features = ["bundled"] }

# Compression support
zstd = { version = "0.13", optional = true }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Async support (optional, for future use)
tokio = { version = "1.45", features = ["rt", "fs"], optional = true }

# MCAP support
mcap = { version = "0.8", optional = true }
memmap2 = { version = "0.9", optional = true }

# Binary dependencies
hex = { version = "0.4", optional = true }
image = { version = "0.24", optional = true }
[dev-dependencies]
tempfile = "3.20"
pretty_assertions = "1.4"

[features]
default = ["sqlite", "mcap", "compression", "bin-tools"]
sqlite = ["rusqlite"]
mcap = ["dep:mcap", "dep:memmap2"]
compression = ["dep:zstd"]
async = ["tokio"]
write-only = ["sqlite"]
bin-tools = ["dep:hex", "dep:image"]

[[bin]]
name = "bag_info"
path = "src/bin/bag_info.rs"
required-features = ["default"]

[[bin]]
name = "bag_filter"
path = "src/bin/bag_filter.rs"
required-features = ["default"]

[[bin]]
name = "extract_topic_data"
path = "src/bin/extract_topic_data.rs"
required-features = ["default", "bin-tools"]

[[bin]]
name = "write_dummy_bag"
path = "src/bin/write_dummy_bag.rs"
required-features = ["write-only"]


